# zoha

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  justfile
src/: hack.rs  lib.rs  main.rs
src/app/: context.rs  mod.rs  signal.rs  window.rs
src/config/: args.rs  cfg.rs  color.rs  mod.rs  style.rs
src/ui/: actions.rs  mod.rs  terminal.rs  verbose.rs  window.rs
